--- a/mybatis-02/pom.xml
+++ b/mybatis-02/pom.xml
@@ -11,5 +11,14 @@
 
   <artifactId>mybatis-02</artifactId>
 
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+  </dependencies>
+
 
 </project>
